# ChangeLog for net-libs/libproxy
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.41 2010/10/28 09:20:32 ssuominen Exp $

  28 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  files/libproxy-0.4.6-mozjs-link_directory.patch:
  Update to upstream patch wrt #339216 by Nicolas Dufresne.

  30 Sep 2010; Samuli Suominen <ssuominen@gentoo.org> libproxy-0.4.6.ebuild,
  +files/libproxy-0.4.6-mozjs-link_directory.patch:
  Fix missing link directories for mozjs wrt #339216 by "DaggyStyle".

*libproxy-0.4.6 (29 Sep 2010)

  29 Sep 2010; Pacho Ramos <pacho@gentoo.org> +libproxy-0.4.6.ebuild:
  Version bump with a lot of bugfixes, minimum cmake required version is 2.6
  now, drop 'debug' USE flag as there is no need now to filter Werror/Wall
  CFLAGS, add dotnet support, build tests only when needed, fix
  CFLAGS/CXXFLAGS/LDFLAGS parsing.

  16 Aug 2010; Samuli Suominen <ssuominen@gentoo.org> libproxy-0.4.2.ebuild,
  +files/libproxy-0.4.2-glibc212.patch:
  Fix building with recent glibc wrt #332857 by f3d.

  15 Jul 2010; Jeroen Roovers <jer@gentoo.org> libproxy-0.4.2.ebuild:
  Marked ~hppa (bug #320429).

  15 Jul 2010; Jeroen Roovers <jer@gentoo.org> libproxy-0.2.3-r3.ebuild:
  Stable for HPPA (bug #314007).

  06 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> libproxy-0.4.2.ebuild:
  Keyword ~ppc64 wrt #320429

  29 Jun 2010; Robin H. Johnson <robbat2@gentoo.org> libproxy-0.4.2.ebuild,
  +files/libproxy-0.4.2-mozjs-search-order.patch:
  Minor patch to compile when both 1.8 and 1.9 slots of xulrunner are
  present.

  31 May 2010; Gilles Dartiguelongue <eva@gentoo.org> libproxy-0.4.2.ebuild:
  Preserve old lib, bug #320511. Install perl binding in vendor directory,
  bug #321807. Improve python binding handling, bug #315319.

  23 May 2010; <nixnut@gentoo.org> libproxy-0.2.3-r3.ebuild:
  ppc stable #314007

*libproxy-0.4.2 (21 May 2010)
