@@ -1,6 +1,13 @@
 # ChangeLog for net-libs/libproxy
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.41 2010/10/28 09:20:32 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.42 2010/11/02 09:30:25 ssuominen Exp $
+
+*libproxy-0.4.6-r1 (02 Nov 2010)
+
+  02 Nov 2010; Samuli Suominen <ssuominen@gentoo.org> libproxy-0.4.6.ebuild,
+  +libproxy-0.4.6-r1.ebuild:
+  Disable dev-lang/vala support because it's not ready to be stabilized wrt
+  #343737.
 
   28 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
   files/libproxy-0.4.6-mozjs-link_directory.patch:
